--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-	"name": "root",
-	"private": true,
-	"packageManager": "pnpm@9.13.2",
-	"engines": {
-		"node": ">=18.20.3"
-	},
-	"scripts": {
-		"package:dev": "pnpm --filter package-name dev",
-		"playground:dev": "pnpm --filter playground dev",
-		"dev": "pnpm --stream -r -parallel dev",
-		"changeset": "changeset",
-		"release": "node scripts/release.mjs",
-		"lint": "biome check .",
-		"lint:fix": "biome check --apply ."
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@changesets/cli": "^2.27.9"
-	}
+  "name": "root",
+  "private": true,
+  "packageManager": "pnpm@9.13.2",
+  "engines": {
+    "node": ">=18.20.3"
+  },
+  "scripts": {
+    "package:dev": "pnpm --filter astro-dynamic-static-split-domain dev",
+    "playground:dev": "pnpm --filter playground dev",
+    "dev": "pnpm --stream -r -parallel dev",
+    "changeset": "changeset",
+    "release": "node scripts/release.mjs",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome check --linter-enabled=false --write ."
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@changesets/cli": "^2.27.9"
+  }
 }
