--- a/package/package.json
+++ b/package/package.json
@@ -1,44 +1,49 @@
 {
-	"name": "package-name",
-	"version": "0.0.0",
-	"description": "TODO:",
-	"author": {
-		"email": "TODO:",
-		"name": "TODO:",
-		"url": "TODO:"
-	},
-	"license": "MIT",
-	"keywords": [
-		"astro-integration",
-		"astro-component",
-		"withastro",
-		"astro",
-		"TODO:"
-	],
-	"homepage": "TODO:",
-	"publishConfig": {
-		"access": "public"
-	},
-	"sideEffects": false,
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"default": "./dist/index.js"
-		}
-	},
-	"files": ["dist"],
-	"scripts": {
-		"dev": "tsup --watch",
-		"build": "tsup"
-	},
-	"type": "module",
-	"peerDependencies": {
-		"astro": "^4.16.13"
-	},
-	"dependencies": {
-		"astro-integration-kit": "^0.17.0"
-	},
-	"devDependencies": {
-		"tsup": "^8.3.5"
-	}
+  "name": "astro-dynamic-static-split-domain",
+  "version": "0.0.1",
+  "description": "An astro integration that allows you to split the domains that your static content and dynamic content are served on",
+  "author": {
+    "email": "jroberts.g1ql8@simplelogin.com",
+    "name": "Jake Roberts",
+    "url": "https://jakerob.pro"
+  },
+  "license": "MIT",
+  "keywords": ["astro-integration", "astro-component", "withastro", "astro"],
+  "homepage": "https://github.com/Jacob-Roberts/astro-dynamic-static-split-domain",
+  "publishConfig": {
+    "access": "public"
+  },
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+	"main": "./dist/index.js",
+  "files": ["dist"],
+  "scripts": {
+    "dev": "tsup --watch",
+		"ci": "npm run build && npm run check-format && npm run check-exports",
+    "build": "tsc",
+		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
+  },
+  "type": "module",
+  "peerDependencies": {
+    "astro": "^4.16.14"
+  },
+  "dependencies": {
+    "astro-integration-kit": "^0.17.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@arethetypeswrong/cli": "^0.16.4",
+    "@biomejs/biome": "1.9.3",
+    "@changesets/cli": "^2.27.9",
+    "@types/node": "^18.19.59",
+    "@types/send": "^0.17.4",
+    "@types/server-destroy": "^1.0.4",
+    "astro": "^5.0.0-beta.5",
+    "typescript": "^5.6.3"
+  }
 }
