--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,9 +1,27 @@
 {
-	"extends": "astro/tsconfigs/strictest",
-	"compilerOptions": {
-		"module": "Node16",
-		"moduleResolution": "Node16",
-		"jsx": "preserve"
-	},
-	"exclude": ["dist"]
+  "compilerOptions": {
+    /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+    /* Strictness */
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    /* If transpiling with TypeScript: */
+    "module": "NodeNext",
+    "outDir": "dist",
+    "sourceMap": true,
+    /* AND if you're building for a library: */
+    "declaration": true,
+    /* If your code doesn't run in the DOM: */
+    "lib": ["es2022"]
+  },
+  "include": ["src"],
+  "exclude": ["dist"]
 }
