--- a/package/package.json
+++ b/package/package.json
@@ -20,30 +20,23 @@
       "default": "./dist/index.js"
     }
   },
-	"main": "./dist/index.js",
+  "main": "./dist/index.js",
   "files": ["dist"],
   "scripts": {
-    "dev": "tsup --watch",
-		"ci": "npm run build && npm run check-format && npm run check-exports",
+    "ci": "npm run build && npm run check-exports",
     "build": "tsc",
-		"check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
+    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
   },
   "type": "module",
   "peerDependencies": {
-    "astro": "^4.16.14"
+    "astro": ">=5.0.0-beta.10"
   },
   "dependencies": {
-    "astro-integration-kit": "^0.17.0",
-    "zod": "^3.23.8"
+    "zod": "^3.0.0"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.16.4",
-    "@biomejs/biome": "1.9.3",
-    "@changesets/cli": "^2.27.9",
-    "@types/node": "^18.19.59",
-    "@types/send": "^0.17.4",
-    "@types/server-destroy": "^1.0.4",
-    "astro": "^5.0.0-beta.5",
+    "@arethetypeswrong/cli": "^0.17.0",
+    "astro": "^5.0.0-beta.10",
     "typescript": "^5.6.3"
   }
 }
