--- a/playground/package.json
+++ b/playground/package.json
@@ -11,15 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.13",
-    "astro-integration-kit": "^0.17.0",
-    "astro-dynamic-static-split-domain": "workspace:*",
-    "tailwindcss": "^3.4.15"
-  },
-  "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@types/node": "^22.9.0",
-    "typescript": "^5.6.3"
+    "@astrojs/node": "^9.0.0-alpha.1",
+    "astro": "^5.0.0-beta.10",
+    "typescript": "^5.6.2",
+    "astro-dynamic-static-split-domain": "workspace:*"
   }
 }
