--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "jsx": "preserve"
-  },
+  "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
